Add kie-server role to users to allow deploying and managing process instances

--- a/business-central/src/main/docker/wildfly/etc/business-central-roles.properties
+++ b/business-central/src/main/docker/wildfly/etc/business-central-roles.properties
@@ -1,9 +1,9 @@
-wbadmin=admin,analyst,kiemgmt
-krisv=admin,analyst
-john=analyst,Accounting,PM
-mary=analyst,HR
-sales-rep=analyst,sales
-jack=analyst,IT
-katy=analyst,HR
-salaboy=admin,analyst,IT,HR,Accounting
+wbadmin=admin,analyst,kiemgmt,kie-server
+krisv=admin,analyst,kie-server
+john=analyst,Accounting,PM,kie-server
+mary=analyst,HR,kie-server
+sales-rep=analyst,sales,kie-server
+jack=analyst,IT,kie-server
+katy=analyst,HR,kie-server
+salaboy=admin,analyst,IT,HR,Accounting,kie-server
 kieserver=kie-server
