added ee7 and webc into depMmgt section
(cherry picked from commit c0c970009b6a72460e362ff880d00468b00c74d3)

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,20 @@
         <type>war</type>
         <classifier>wildfly14</classifier>
       </dependency>
+      <dependency>
+        <groupId>org.kie.server</groupId>
+        <artifactId>kie-server</artifactId>
+        <type>war</type>
+        <classifier>ee7</classifier>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.kie.server</groupId>
+        <artifactId>kie-server</artifactId>
+        <type>war</type>
+        <classifier>webc</classifier>
+        <version>${project.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
