--- a/kie-jboss-modules/pom.xml
+++ b/kie-jboss-modules/pom.xml
@@ -19,7 +19,7 @@
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
   </dependencies>
